--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,175 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <p>{{welcome}}</p>
+        <header>
+            <div class="row">
+                <div class="column large-3 tac">
+                    <h1>FAST/APPS<small>v0.1</small></h1>
+                </div>
+                <div class="column large-9 tar show-for-large-only">
+                    <a href="">Home</a>
+                    <a href="">Features</a>
+                    <a href="">Download</a>
+                    <a href="">Documentation</a>
+                    <a href="">Contact</a>
+                </div>
+            </div>
+        </header>
+        <section id="home">
+            <div class="row">
+                <div class="column large-6 tac">
+                    <h1>Bienvenidos a la nueva forma de hacer apps hibridas</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, ea quia nesciunt corrupti incidunt. Repudiandae, natus, exercitationem in magnam consequuntur reiciendis corporis voluptatibus nostrum excepturi rem vel omnis distinctio debitis!</p>
+                </div>
+                <div class="column large-4 tac">
+                    <img src="http://www.jansimecek.com/themes/ultimate/images/iphone.png" alt="">
+                </div>
+            </div>
+        </section>
+
+
+        <section id="features">
+            <h1 class="tac">Features</h1>
+            <div class="row tac">
+                <div class="column large-4">
+                    <img src="img/phonegap_gray.png" alt="phonegap">
+                    <h2>Phonegap</h2>
+                    <p>Lo bueno de usar phonegap es que podemos escribir el app una sola vez y publicarla facilmente en los diferentes tiendas de aplicaciones</p>
+                </div>
+                <div class="column large-4">
+                    <img src="img/angular_gray.png" alt="">
+                    <h2>Angular</h2>
+                    <p>Con Angular todo se vuelve super-modular. Las directivas, factories y services llegan al rescate para hacer aplicaciones escalables y mantenibles. Fastapps no le tiene miedo a los ng-*. Para más información visita <a href="">Angularjs website</a></p>
+                </div>
+                <div class="column large-4">
+                    <img src="img/foundation_gray.png" alt="">
+                    <h2>Foundation</h2>
+                    <p>Una buena base en CSS es escencial para desarrollar apps. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, ipsum beatae adipisci porro quasi hic!</p>
+                </div>
+            </div>
+            <div class="row tac">
+                <div class="column large-4">
+                    <img src="img/less_gray.png" alt="">
+                    <h2>Less</h2>
+                    <p>Ya es imposible escribir CSS sin un preprocesador. Fastapps usa LESS para facilitar el cambio de colores de toda el app. Si necesitas mas información sobre less <a href="">vente pa' ca'</a> o <a href="">aca tambien</a>.</p>
+                </div>
+                <div class="column large-4">
+                    <img src="img/jquery_gray.png" alt="">
+                    <h2>jQuery compatible</h2>
+                    <p>Tienes algun plugin de jQuery que no puedes dejar de usar? Fastapps es compatible con jQuery. Solo ten cuidado de no usarlo erroneamente. De hecho el bundle ya tiene varios plugins integrados.</p>
+                </div>
+                <div class="column large-4">
+                    <img src="img/grunt_gray.png" alt="">
+                    <h2>Gruntjs</h2>
+                    <p>Fastapps ya tiene integrado Gruntjs para que nos sea muy facil compilar los archivos LESS a CSS. Tambien podemos concatenar y minificar nuestos archivos javascript; esto nos permite tener una estructura de carpetas libres. PUM! algo cambió? Grunt compila todo. Ver más info <a href="">En la docu</a></p>
+                </div>
+
+            </div>
+        </section>
+
+        <section id="down">
+            <h1 class="tac">Download</h1>
+            <div class="row tac">
+                <div class="column large-10 large-centered">
+                    <p>Simplemente clona este repositorio escribiendo <code>git clone https://github.com/juanpasolano/angular-mobile-demo.git</code> en tu consola.</p>
+                    <p>Una vez clonado da <code>npm install</code> para instalar las dependencias de gruntjs.</p>
+                    <p>Luego escribe <code>grunt</code> para empezar a vigilar y compilar los archivos less y contatenar y minificar los archivos javascript.</p>
+                </div>
+            </div>
+            <div class="row tac">
+                <div class="column large-10 large-centered">
+                    <a href="https://github.com/juanpasolano/angular-mobile-demo" target="_blank" class="button">Repositorio en github</a>
+                    <a href="https://github.com/juanpasolano/angular-mobile-demo/issues" target="_blank" class="button">Reporta un bug</a>
+                </div>
+            </div>
+        </section>
+
+        <section id="docu">
+            <h1 class="tac">LA DOCU</h1>
+            <div class="row">
+                <div class="column large-3">
+                    <ul>
+                        <li><a href="">Instalacion</a></li>
+                        <li><a href="">Grunt</a></li>
+                        <li><a href="">Less</a></li>
+                        <li><a href="">Mixins y otros helpers CSS</a></li>
+                        <li><a href="">Configuraciones globales</a></li>
+                        <li><a href="">Directivas</a></li>
+                        <li><a href="">jQuery Plugins</a></li>
+                    </ul>
+                </div>
+                <div class="column large-8">
+                    <h2>Instalacion</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, ullam commodi accusantium laborum repellat voluptate aliquam atque perspiciatis distinctio ex.</p>
+
+                    <h2>Grunt</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, doloremque, quod veniam nam facere porro maiores magni minus ut velit hic similique ad unde quae rem non quidem dignissimos deserunt voluptatum assumenda impedit repudiandae ducimus laborum perferendis qui voluptas accusantium!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, nemo, debitis architecto cum est reiciendis maxime aut eum fugit officiis rem quo a quisquam quidem vitae reprehenderit recusandae qui sed dolores nihil? Dolorem, blanditiis praesentium consequatur ipsam minima dolore quod facilis enim dicta aspernatur maxime impedit cumque similique incidunt omnis perferendis quaerat!</p>
+
+                    <code>
+                    uglify  Minify files with UglifyJS. * <br>
+                    concat  Concatenate files. * <br>
+                     watch  Run predefined tasks whenever watched files change. <br>
+                      less  Compile LESS files to CSS * <br>
+                      sass  Compile Sass to CSS * <br>
+                      copy  Copy files. * <br>
+                    notify  Show an arbitrary notification whenever you need. * <br>
+              notify_hooks  Config the automatic notification hooks. <br>
+                   default  Alias for "watch" task. <br>
+                  watch-js  Alias for "watch:js_app" task. <br>
+                watch-less  Alias for "watch:less" task. <br>
+                watch-sass  Alias for "watch:sass" task. <br>
+                concat-app  Alias for "concat:js_app" task. <br>
+                uglify-app  Alias for "uglify:js_app" task. <br>
+               uglify-libs  Alias for "uglify:js_libs" task. <br>
+                   copy-pg  Alias for "copy:phonegap", "notify:copypg" tasks. <br>
+                    </code>
+
+                    <h2>Less variables</h2>
+                    <p>Estas son las variables de less que puedes customizar</p>
+                    <code>
+                        @mainFont:'Lato', Sans-serif; <br>
+                        @sideBarWidth:250px; <br>
+                        @headerHeight: 70px; <br>
+                        @footerHeight:70px; <br> <br>
+
+                        @mainColor:#E6375A; <br>
+                        @secondColor:spin(@mainColor, 20%); <br>
+                        @darkGray:#4A4D4E; <br>
+                        @lightGray:#dfe2e2; <br>
+
+                        @headerColor:@darkGray; <br>
+                        @sideNavColor:#fff; <br>
+                        @footerColor:@darkGray; <br>
+                        @contentColor: white; <br> <br>
+
+                        @paragraphColor:@darkGray; <br>
+                        @headersColor:@darkGray; <br>
+                    </code>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact">
+            <h1 class="tac">Contacto</h1>
+            <div class="row">
+                <div class="column large-6">
+                    <form action="">
+                        <label for="">Nombre</label>
+                        <input type="text">
+                        <label for="">Email</label>
+                        <input type="text">
+                        <label for="">Mensaje</label>
+                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                        <input type="submit" value="ENVIAR" class="button">
+                    </form>
+                </div>
+                <div class="column large-6">
+                    <p>Si tienes alguna duda, un comentario, recomendacion, oración, donación, invitación; puedes contactrame directamente a juanpablo.solano(at)imaginamos(dot)com</p>
+                </div>
+            </div>
+
+        </section>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
