--- a/www/index.html
+++ b/www/index.html
@@ -26,15 +26,19 @@
                     <h1>FAST/APPS<small>v0.1</small></h1>
                 </div>
                 <div class="column large-9 tar show-for-large-only">
-                    <a href="">Home</a>
-                    <a href="">Features</a>
-                    <a href="">Download</a>
-                    <a href="">Documentation</a>
-                    <a href="">Contact</a>
+                    <a href="#home">Home</a>
+                    <a href="">Demo</a>
+                    <a href="#features">Features</a>
+                    <a href="#download">Download</a>
+                    <a href="#docu">La docu</a>
+                    <a href="#contact">Contact</a>
                 </div>
             </div>
         </header>
+
+
         <section id="home">
+            <a name="home"></a>
             <div class="row">
                 <div class="column large-6 tac">
                     <h1>Bienvenidos a la nueva forma de hacer apps hibridas</h1>
@@ -48,6 +52,7 @@
 
 
         <section id="features">
+            <a name="features"></a>
             <h1 class="tac">Features</h1>
             <div class="row tac">
                 <div class="column large-4">
@@ -74,7 +79,7 @@
                 </div>
                 <div class="column large-4">
                     <img src="img/jquery_gray.png" alt="">
-                    <h2>jQuery compatible</h2>
+                    <h2>jQuery</h2>
                     <p>Tienes algun plugin de jQuery que no puedes dejar de usar? Fastapps es compatible con jQuery. Solo ten cuidado de no usarlo erroneamente. De hecho el bundle ya tiene varios plugins integrados.</p>
                 </div>
                 <div class="column large-4">
@@ -87,6 +92,7 @@
         </section>
 
         <section id="down">
+            <a name="download"></a>
             <h1 class="tac">Download</h1>
             <div class="row tac">
                 <div class="column large-10 large-centered">
@@ -104,6 +110,7 @@
         </section>
 
         <section id="docu">
+            <a name="docu"></a>
             <h1 class="tac">LA DOCU</h1>
             <div class="row">
                 <div class="column large-3">
@@ -170,6 +177,7 @@
         </section>
 
         <section id="contact">
+            <a name="contact"></a>
             <h1 class="tac">Contacto</h1>
             <div class="row">
                 <div class="column large-6">
