--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="column large-9 tar show-for-large-only">
                     <a href="#home">Home</a>
-                    <a href="">Demo</a>
+                    <a href="#demo">Demo</a>
                     <a href="#features">Features</a>
                     <a href="#download">Download</a>
                     <a href="#docu">La docu</a>
@@ -92,6 +92,7 @@
         </section>
 
         <section id="demo">
+            <a name="#demo"></a>
             <div class="row">
                 <div class="column large-6 tac">
                     <h1 class="tac">DEMO</h1>
