--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/vendor/foundation.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <!-- <link rel="stylesheet" href="css/vendor/sh/shCoreDefault.css"> -->
         <script src="js/vendor/modernizr-2.7.1.min.js"></script>
     </head>
     <body ng-controller="MainCtrl">
@@ -37,52 +38,52 @@
         </header>
 
         <article>
+            <a name="home"></a>
             <section id="home">
-                <a name="home"></a>
                 <div class="row">
-                    <div class="column large-6 tac">
-                        <h1>Bienvenidos a la nueva forma de hacer apps hibridas</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, ea quia nesciunt corrupti incidunt. Repudiandae, natus, exercitationem in magnam consequuntur reiciendis corporis voluptatibus nostrum excepturi rem vel omnis distinctio debitis!</p>
+                    <div class="column large-6 medium-6 tac">
+                        <h1>The ultimate boilerplate for hybrid apps</h1>
+                        <p>Luego de tropezar y tropezar, primero con jQuery mobile (shh! no le digan a nadie que alguna vez usamos jQuery mobile) y luego con jQmobi. Decidimos hacer nuestro propio boilerplate para las apps hibridas. Este recoge toda nuestra experiencia y la pone a dispcición de todos. Enjoy!</p>
                     </div>
-                    <div class="column large-4 tac frame-holder">
+                    <div class="column large-4 medium-4 tac frame-holder">
                         <img src="img/iphone.png" height="742" width="380" alt="">
                     </div>
                 </div>
             </section>
 
 
+            <a name="features"></a>
             <section id="features">
-                <a name="features"></a>
                 <h1 class="tac">Features</h1>
                 <div class="row tac">
-                    <div class="column large-4">
+                    <div class="column large-4 medium-4">
                         <img src="img/phonegap_gray.png" alt="phonegap">
                         <h2>Phonegap</h2>
                         <p>Lo bueno de usar phonegap es que podemos escribir el app una sola vez y publicarla facilmente en los diferentes tiendas de aplicaciones</p>
                     </div>
-                    <div class="column large-4">
+                    <div class="column large-4 medium-4">
                         <img src="img/angular_gray.png" alt="">
                         <h2>Angular</h2>
                         <p>Con Angular todo se vuelve super-modular. Las directivas, factories y services llegan al rescate para hacer aplicaciones escalables y mantenibles. Fastapps no le tiene miedo a los ng-*. Para más información visita <a href="">Angularjs website</a></p>
                     </div>
-                    <div class="column large-4">
+                    <div class="column large-4 medium-4">
                         <img src="img/foundation_gray.png" alt="">
                         <h2>Foundation</h2>
                         <p>Una buena base en CSS es escencial para desarrollar apps. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, ipsum beatae adipisci porro quasi hic!</p>
                     </div>
                 </div>
                 <div class="row tac">
-                    <div class="column large-4">
+                    <div class="column large-4 medium-4">
                         <img src="img/less_gray.png" alt="">
                         <h2>Less</h2>
                         <p>Ya es imposible escribir CSS sin un preprocesador. Fastapps usa LESS para facilitar el cambio de colores de toda el app. Si necesitas mas información sobre less <a href="">vente pa' ca'</a> o <a href="">aca tambien</a>.</p>
                     </div>
-                    <div class="column large-4">
+                    <div class="column large-4 medium-4">
                         <img src="img/jquery_gray.png" alt="">
                         <h2>jQuery</h2>
                         <p>Tienes algun plugin de jQuery que no puedes dejar de usar? Fastapps es compatible con jQuery. Solo ten cuidado de no usarlo erroneamente. De hecho el bundle ya tiene varios plugins integrados.</p>
                     </div>
-                    <div class="column large-4">
+                    <div class="column large-4 medium-4">
                         <img src="img/grunt_gray.png" alt="">
                         <h2>Gruntjs</h2>
                         <p>Fastapps ya tiene integrado Gruntjs para que nos sea muy facil compilar los archivos LESS a CSS. Tambien podemos concatenar y minificar nuestos archivos javascript; esto nos permite tener una estructura de carpetas libres. PUM! algo cambió? Grunt compila todo. Ver más info <a href="">En la docu</a></p>
@@ -91,45 +92,48 @@
                 </div>
             </section>
 
+            <a name="#demo"></a>
             <section id="demo">
-                <a name="#demo"></a>
                 <div class="row">
-                    <div class="column large-6 tac">
+                    <div class="column large-6 medium-12 tac">
                         <h1 class="tac">DEMO</h1>
+                        <p class="show-for-medium-down">Your are on a device <a href="demo/index.html">Go here</a></p>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, ea quia nesciunt corrupti incidunt. Repudiandae, natus, exercitationem in magnam consequuntur reiciendis corporis voluptatibus nostrum excepturi rem vel omnis distinctio debitis!</p>
                     </div>
-                    <div class="column large-5 frame-holder">
+                    <div class="column large-5 medium-5 frame-holder show-for-large-only">
                         <iframe src="demo/index.html" frameborder="0" width="320" height="570"></iframe>
                         <img src="img/iphone.png" height="742" width="380" alt="">
                     </div>
                 </div>
             </section>
 
+            <a name="download"></a>
             <section id="down">
-                <a name="download"></a>
                 <h1 class="tac">Download</h1>
                 <div class="row tac">
-                    <div class="column large-10 large-centered">
+                    <div class="column large-10 medium-10 large-centered medium-centered">
                         <p>Simplemente clona este repositorio escribiendo <code>git clone https://github.com/juanpasolano/angular-mobile-demo.git</code> en tu consola.</p>
                         <p>Una vez clonado da <code>npm install</code> para instalar las dependencias de gruntjs.</p>
                         <p>Luego escribe <code>grunt</code> para empezar a vigilar y compilar los archivos less y contatenar y minificar los archivos javascript.</p>
                     </div>
                 </div>
                 <div class="row tac">
-                    <div class="column large-10 large-centered">
+                    <div class="column large-10 large-centered medium-centered">
                         <a href="https://github.com/juanpasolano/angular-mobile-demo" target="_blank" class="button">Repositorio en github</a>
                         <a href="https://github.com/juanpasolano/angular-mobile-demo/issues" target="_blank" class="button">Reporta un bug</a>
                     </div>
                 </div>
             </section>
 
+            <a name="docu"></a>
             <section id="docu">
-                <a name="docu"></a>
                 <h1 class="tac">LA DOCU</h1>
                 <div class="row">
-                    <div class="column large-3">
-                        <ul>
-                            <li><a href="">Instalacion</a></li>
+                    <div class="column large-3 medium-4">
+                        <ul class="menu">
+                            <li><a href="">Prerequisitos</a></li>
+                            <li><a href="">Instalación</a></li>
+                            <li><a href="">Deply a phonegap</a></li>
                             <li><a href="">Grunt</a></li>
                             <li><a href="">Less</a></li>
                             <li><a href="">Mixins y otros helpers CSS</a></li>
@@ -138,54 +142,72 @@
                             <li><a href="">jQuery Plugins</a></li>
                         </ul>
                     </div>
-                    <div class="column large-8">
-                        <h2>Instalacion</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, ullam commodi accusantium laborum repellat voluptate aliquam atque perspiciatis distinctio ex.</p>
+                    <div class="column large-9 medium-8">
+<div class="markdown">
+##Prerequisitos
+- Node / npm
+- Grunt CLI
 
-                        <h2>Grunt</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, doloremque, quod veniam nam facere porro maiores magni minus ut velit hic similique ad unde quae rem non quidem dignissimos deserunt voluptatum assumenda impedit repudiandae ducimus laborum perferendis qui voluptas accusantium!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, nemo, debitis architecto cum est reiciendis maxime aut eum fugit officiis rem quo a quisquam quidem vitae reprehenderit recusandae qui sed dolores nihil? Dolorem, blanditiis praesentium consequatur ipsam minima dolore quod facilis enim dicta aspernatur maxime impedit cumque similique incidunt omnis perferendis quaerat!</p>
+##Instalación
+Para instalar o usar este boilerplate simplemente clona este repositorio dando `git clone https://github.com/juanpasolano/angular-mobile-demo.git` en la consola.
 
-                        <code>
-                        uglify  Minify files with UglifyJS. * <br>
-                        concat  Concatenate files. * <br>
-                         watch  Run predefined tasks whenever watched files change. <br>
-                          less  Compile LESS files to CSS * <br>
-                          sass  Compile Sass to CSS * <br>
-                          copy  Copy files. * <br>
-                        notify  Show an arbitrary notification whenever you need. * <br>
-                  notify_hooks  Config the automatic notification hooks. <br>
-                       default  Alias for "watch" task. <br>
-                      watch-js  Alias for "watch:js_app" task. <br>
-                    watch-less  Alias for "watch:less" task. <br>
-                    watch-sass  Alias for "watch:sass" task. <br>
-                    concat-app  Alias for "concat:js_app" task. <br>
-                    uglify-app  Alias for "uglify:js_app" task. <br>
-                   uglify-libs  Alias for "uglify:js_libs" task. <br>
-                       copy-pg  Alias for "copy:phonegap", "notify:copypg" tasks. <br>
-                        </code>
+Una vez clonados los archivos debes instalar las dependencias de node para que gruntjs funcione. Esto se hace dando `npm install` en la consola. Si quieres ver las dependencias que se estan usando, mira le archivo `package.json`.
 
-                        <h2>Less variables</h2>
-                        <p>Estas son las variables de less que puedes customizar</p>
-                        <code>
-                            @mainFont:'Lato', Sans-serif; <br>
-                            @sideBarWidth:250px; <br>
-                            @headerHeight: 70px; <br>
-                            @footerHeight:70px; <br> <br>
+Luego de instalar los paquetes de node puedes comenzar a usar grunt dando `grunt` en la consola.
 
-                            @mainColor:#E6375A; <br>
-                            @secondColor:spin(@mainColor, 20%); <br>
-                            @darkGray:#4A4D4E; <br>
-                            @lightGray:#dfe2e2; <br>
+##Deploy a phonegap
 
-                            @headerColor:@darkGray; <br>
-                            @sideNavColor:#fff; <br>
-                            @footerColor:@darkGray; <br>
-                            @contentColor: white; <br> <br>
+Para enviar los archivos a las carpetas de phonega es probable que tengas que modificar el archivo `Gruntfile.js` que esta en la raiz del directorio.
 
-                            @paragraphColor:@darkGray; <br>
-                            @headersColor:@darkGray; <br>
-                        </code>
+En grunt esta disponible el task `copy-pg`. Este es el encargado de copiar los archivos hacia la carpeta de phonegap.
+
+Para que funcione bien tienes que cambiar la carpeta a la que esta apuntando `Gruntfile.js`
+
+```
+copy: {
+    phonegap: {
+        files: [
+            {expand: true, src: ['www/**'],
+                dest: '../NOMBRE_CARPETA/platforms/ios/'},
+            {expand: true, src: ['www/**'],
+                dest: '../NOMBRE_CARPETA/platforms/android/assets/'},
+        ]
+    }
+}
+```
+##Gruntjs
+
+Hay 3 tareas de grunt importantes en el boilerplate:
+
+- Comilar LESS.
+- Compilar y concatenar javascript.
+- Copiar archivos a carpetas de phonegap
+
+##Less
+
+Estas son las variables de less disponibles
+
+```
+@mainFont:'Lato', Sans-serif;
+@sideBarWidth:250px;
+@headerHeight: 70px;
+@footerHeight:70px;
+
+@mainColor:#E6375A;
+@secondColor:spin(@mainColor, 20%);
+@darkGray:#4A4D4E;
+@lightGray:#dfe2e2;
+
+@headerColor:@darkGray;
+@sideNavColor:#fff;
+@footerColor:@darkGray;
+@contentColor: white;
+
+@paragraphColor:@darkGray;
+@headersColor:@darkGray;
+```
+</div>
+
                     </div>
                 </div>
             </section>
@@ -194,7 +216,7 @@
                 <a name="contact"></a>
                 <h1 class="tac">Contacto</h1>
                 <div class="row">
-                    <div class="column large-6">
+                    <div class="column large-6 medium-6">
                         <form action="">
                             <label for="">Nombre</label>
                             <input type="text">
@@ -205,7 +227,7 @@
                             <input type="submit" value="ENVIAR" class="button">
                         </form>
                     </div>
-                    <div class="column large-6">
+                    <div class="column large-6 medium-6">
                         <p>Si tienes alguna duda, un comentario, recomendacion, oración, donación, invitación; puedes contactrame directamente a juanpablo.solano(at)imaginamos(dot)com</p>
                     </div>
                 </div>
@@ -216,6 +238,11 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
         <script src="js/vendor/angular/angular-1.2.14/angular.min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/showdown/0.3.1/showdown.min.js"></script>
+
+
+        <!-- <script type="text/javascript" src="js/vendor/sh/shCore.js"></script>
+        <script type="text/javascript" src="js/vendor/sh/shBrushJScript.js"></script> -->
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
