--- a/www/index.html
+++ b/www/index.html
@@ -77,7 +77,7 @@
                     <div class="column large-4 medium-4">
                         <img src="img/less_gray.png" alt="">
                         <h2>Less</h2>
-                        <p>Ya es imposible escribir CSS sin un preprocesador. Fastapps usa LESS para facilitar el cambio de colores de toda el app. Si necesitas mas información sobre less <a href="">vente pa' ca'</a> o <a href="">aca tambien</a>.</p>
+                        <p>Ya es imposible escribir CSS sin un preprocesador. Fastapps usa LESS para facilitar el cambio de colores de toda el app. Si necesitas mas información sobre less <a href="http://lesscss.org/">vente pa' ca'</a>.
                     </div>
                     <div class="column large-4 medium-4">
                         <img src="img/jquery_gray.png" alt="">
@@ -87,7 +87,7 @@
                     <div class="column large-4 medium-4">
                         <img src="img/grunt_gray.png" alt="">
                         <h2>Gruntjs</h2>
-                        <p>Fastapps ya tiene integrado Gruntjs para que nos sea muy facil compilar los archivos LESS a CSS. Tambien podemos concatenar y minificar nuestos archivos javascript; esto nos permite tener una estructura de carpetas libres. PUM! algo cambió? Grunt compila todo. Ver más info <a href="">En la docu</a></p>
+                        <p>Fastapps ya tiene integrado Gruntjs para que nos sea muy facil compilar los archivos LESS a CSS. Tambien podemos concatenar y minificar nuestos archivos javascript; esto nos permite tener una estructura de carpetas libres. PUM! algo cambió? Grunt compila todo. <a href="http://gruntjs.com/">Sobre grunt</a></p>
                     </div>
 
                 </div>
@@ -129,8 +129,8 @@
                 </div>
             </section>
 
-            <a name="docu"></a>
-            <!-- <section id="docu">
+            <!--<a name="docu"></a>
+             <section id="docu">
                 <h1 class="tac">LA DOCU</h1>
                 <div class="row">
                     <div class="column large-3 medium-4">
