--- a/www/index.html
+++ b/www/index.html
@@ -165,6 +165,8 @@
                             <input type="text">
                             <label for="">Mensaje</label>
                             <textarea name="" id="" cols="30" rows="10"></textarea>
+                            <label for="">Cuando es 2+5+8?</label>
+                            <input type="text" placeholder="Respuesta">
                             <input type="submit" value="ENVIAR" class="button">
                         </form>
                     </div>
