--- a/www/index.html
+++ b/www/index.html
@@ -157,21 +157,24 @@
                 <a name="contact"></a>
                 <h1 class="tac">Contacto</h1>
                 <div class="row">
-                    <div class="column large-6 medium-6">
-                        <form action="">
-                            <label for="">Nombre</label>
-                            <input type="text">
-                            <label for="">Email</label>
-                            <input type="text">
-                            <label for="">Mensaje</label>
-                            <textarea name="" id="" cols="30" rows="10"></textarea>
-                            <label for="">Cuando es 2+5+8?</label>
-                            <input type="text" placeholder="Respuesta">
-                            <input type="submit" value="ENVIAR" class="button">
-                        </form>
-                    </div>
-                    <div class="column large-6 medium-6">
+                    <div class="column large-10 medium-10 large-centered medium-centered">
                         <p>Si tienes alguna duda, un comentario, recomendacion, oración, donación, invitación; puedes contactrame directamente a juanpablo.solano(at)imaginamos(dot)com</p>
+                        <p>O puedes dejar tu comentario con disqus acá abajo</p>
+                        <div id="disqus_thread"></div>
+                        <script type="text/javascript">
+                        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+                        var disqus_shortname = 'fastappsimaginamos'; // required: replace example with your forum shortname
+
+                        /* * * DON'T EDIT BELOW THIS LINE * * */
+                        (function() {
+                        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                        })();
+                        </script>
+                        <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                        <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+
                     </div>
                 </div>
 
