--- a/www/index.html
+++ b/www/index.html
@@ -201,5 +201,20 @@
           ga('create', 'UA-49129107-1', 'imaginamos.com');
           ga('send', 'pageview');
         </script>
+
+        <!-- KISS ANALYTICS -->
+        <script type="text/javascript">var _kmq = _kmq || [];
+            var _kmk = _kmk || '99d73e1fbf0b26f7ecd3ad56f1b62d82ae732a24';
+            function _kms(u){
+              setTimeout(function(){
+                var d = document, f = d.getElementsByTagName('script')[0],
+                s = d.createElement('script');
+                s.type = 'text/javascript'; s.async = true; s.src = u;
+                f.parentNode.insertBefore(s, f);
+              }, 1);
+            }
+            _kms('//i.kissmetrics.com/i.js');
+            _kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
+        </script>
     </body>
 </html>
