--- a/www/index.html
+++ b/www/index.html
@@ -123,8 +123,8 @@
                 </div>
                 <div class="row tac">
                     <div class="column large-10 large-centered medium-centered">
-                        <a href="https://github.com/juanpasolano/angular-mobile-demo" target="_blank" class="button">Repositorio en github</a>
-                        <a href="https://github.com/juanpasolano/angular-mobile-demo/issues" target="_blank" class="button">Reporta un bug</a>
+                        <a class="button kiss_click" href="https://github.com/juanpasolano/angular-mobile-demo" target="_blank">Repositorio en github</a>
+                        <a class="button kiss_click" href="https://github.com/juanpasolano/angular-mobile-demo/issues" target="_blank">Reporta un bug</a>
                     </div>
                 </div>
             </section>
