--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
         <header>
             <div class="row">
                 <div class="column large-3 tac">
-                    <h1>FAST/APPS reloaded<small>v0.1</small></h1>
+                    <h1>FAST/APPS<small>v0.1</small></h1>
                 </div>
                 <div class="column large-9 tar show-for-large-only">
                     <a href="#home">Home</a>
